updating position of circles, updating fontsize of popup, fix for visible buttons on map transition

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,7 +175,7 @@
     bottom: 12px;
     left: -50px;
     text-align: center;
-    font-size:15px;
+    font-size:12px;
     width: 80px;
 }
 
@@ -274,7 +274,7 @@ sub {
         position: fixed;
     }
     .ol-popup {
-        font-size:12.5;
+        font-size:10;
     }
     .ol-popup sub{
         font-size: x-small;
@@ -296,7 +296,7 @@ sub {
     }
 
     .ol-popup {
-        font-size:10px;
+        font-size:8px;
     }
     .ol-popup sub{
         font-size: x-small;
@@ -321,7 +321,7 @@ sub {
     }
 
     .ol-popup {
-        font-size:7.5;
+        font-size:7;
     }
     .ol-popup sub{
         font-size: xx-small;
